--- a/templates/add.html
+++ b/templates/add.html
@@ -707,9 +707,9 @@
         title="Envie seu Problema"
       >
         <img
-          src="{{ url_for('static', filename='images/enviar_icon_webp') }}"
-          alt="Envie"
-          style="width:30px; height:30px;"
+          src="{{ url_for('static', filename='images/enviar_icon.webp') }}"
+          alt="Envie icon"
+          style="width:30px; height:30px"
         />
         Enviar
       </a>
