--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -28,9 +28,8 @@
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         color: #333;
-        background: url("{{ url_for('static', filename='images/' + random_bg) }}")
-          no-repeat center center fixed;
-        background-size: cover;
+        /* Cor de fundo igual à solucao.html */
+        background-color: #f0f0f0;
         overflow-x: hidden;
         min-height: 100vh;
         display: flex;
