--- a/templates/index.html
+++ b/templates/index.html
@@ -34,14 +34,19 @@
     <style>
       /****************************************************
        * BACKGROUND
+       * Fundo branco + imagem translúcida
        ****************************************************/
       body {
-        background-color: #f0f0f0;
-        background-image: url('{{ url_for("static", filename="images/" ~ random_bg) }}');
+        /* Fundo branco e imagem translúcida por cima */
+        background: linear-gradient(
+            rgba(255, 255, 255, 0.85),
+            rgba(255, 255, 255, 0.85)
+          ),
+          url('{{ url_for("static", filename="images/" ~ random_bg) }}');
         background-repeat: no-repeat;
         background-position: center center;
-        background-attachment: fixed;
         background-size: cover;
+        background-attachment: fixed;
         overflow-x: hidden;
       }
 
@@ -110,7 +115,7 @@
 
       /* Reduzindo um pouco a fonte do título do modal */
       .category-modal-title {
-        font-size: 1.15rem; /* Ajuste sutil para a frase dentro do modal */
+        font-size: 1.15rem;
       }
     </style>
   </head>
@@ -167,33 +172,36 @@
           />
         </div>
 
-        <!-- Barra de Pesquisa -->
-        <form action="{{ url_for('index') }}" method="POST" class="search-container">
-          <div class="input-wrapper">
-            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <path
-                d="M10 2a8 8 0 015.29 13.71l5 5a1 1 0 01-1.42 1.42l-5-5A8 8 0 1110 2zm0 2a6 6 0 100 12 6 6 0 000-12z"
+        <!-- Retângulo branco com cantos arredondados "subposto" (search-box) -->
+        <div class="search-box">
+          <!-- Barra de Pesquisa -->
+          <form action="{{ url_for('index') }}" method="POST" class="search-container">
+            <div class="input-wrapper">
+              <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path
+                  d="M10 2a8 8 0 015.29 13.71l5 5a1 1 0 01-1.42 1.42l-5-5A8 8 0 1110 2zm0 2a6 6 0 100 12 6 6 0 000-12z"
+                />
+              </svg>
+              <input
+                type="text"
+                name="search"
+                placeholder="Pesquise um problema..."
+                autocomplete="off"
               />
-            </svg>
-            <input
-              type="text"
-              name="search"
-              placeholder="Pesquise um problema..."
-              autocomplete="off"
-            />
-          </div>
-          <button type="submit" class="explore-button">
-            <img
-              src="{{ url_for('static', filename='images/fugueti_num_tem_re.webp') }}"
-              alt="Foguete"
-              style="width:30px;height:30px;"
-            />
-            Explorar
-          </button>
-        </form>
+            </div>
+            <button type="submit" class="explore-button">
+              <img
+                src="{{ url_for('static', filename='images/fugueti_num_tem_re.webp') }}"
+                alt="Foguete"
+                style="width:30px;height:30px;"
+              />
+              Explorar
+            </button>
+          </form>
+        </div>
 
         <!-- Botão para abrir Modal de Categoria/Marca -->
-        <div style="margin-bottom: 1rem;">
+        <div style="margin-top: 1.5rem;">
           <button class="btn-selecione-aqui" onclick="openCategoryModal()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z" />
@@ -390,10 +398,6 @@
               stroke-linejoin="round"
               viewBox="0 0 24 24"
             >
-              <!--
-                Seta simples (um único path):
-                Faz um "V" deitado: M14 18 L8 12 L14 6
-              -->
               <path d="M14 18l-6-6 6-6"/>
             </svg>
           </button>
